# arch

./: .SRCINFO  .gitignore  .gitmodules  PKGBUILD  Readme.md
.github/workflows/: build-package.yml
AUR/databricks-cli-bin/: .SRCINFO  PKGBUILD
AUR/nodejs-leapp-cli/: .SRCINFO  PKGBUILD
AUR/python-databricks-cli/: .SRCINFO  PKGBUILD
AUR/python-dbx/: .SRCINFO  PKGBUILD
FORKED/dell-command-configure/: PKGBUILD
FORKED/manim/: .SRCINFO  PKGBUILD
FORKED/mesa/: .SRCINFO  0001-virgl-Use-common-clear_texture-if-host-doesn-t-suppo.patch  PKGBUILD
FORKED/nodenv/: PKGBUILD
UNPUBLISHED/arch-qemu-user-static-aarch64/: PKGBUILD
UNPUBLISHED/databricks-dbx/: .SRCINFO
WIP/nodejs-leapp-cli/: .SRCINFO  PKGBUILD
WIP/pyenv-default-packages/: .SRCINFO  PKGBUILD
WIP/python-mlflow-skinny/: .SRCINFO  PKGBUILD
WIP/python-nile-git/: .SRCINFO  PKGBUILD  pyproject.toml
databricks-dbx/: PKGBUILD
openvpn3/: .SRCINFO  PKGBUILD
python-datadog/: .SRCINFO  PKGBUILD
python-dbx/: PKGBUILD
