[project]
name = "nile"
description = "Unofficial Amazon Games client "
readme = "Readme.md"
license = {text = "GNU General Public License v3 (GPLv3)"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux"
]
version = "0.1"
requires-python = ">=3.6"
dependencies = [
 	'python-requests>=2.27.1<3.0.0',
	'python-PyQt5>=5.15.6',
	'python-PyQtWebEngine>=5.15.5<6.0.0',
	'python-protobuf>=3.19.4',
	'python-pycryptodome>=3.14.1<4.0.0',
	'python-zstandard>=0.17.0<1.0.0'
]

[tool.setuptools]
packages = ["nile"]

[project.scripts]
nile = "nile.cli:main"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
